objects/dbu_partsresponse__c.object
<CustomObject>
    <fields>
        <fullName>DBU_Parts_Response_ID__c</fullName>
        <description>Holds Esn + Partnumber</description>
        <externalId>true</externalId>
        <label>DBU Parts Response ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Number_Z__c</fullName>
        <label>Number_Z</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_Description__c</fullName>
        <label>dbu_Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_ESNNumber__c</fullName>
        <label>dbu_ESNNumber</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_VINNumber__c</fullName>
        <description>This field is used to store the VIN number.</description>
        <label>dbu VINNumber</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_partNumber__c</fullName>
        <label>dbu_partNumber</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>dbu Parts Response</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>dbu_partsresponse Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>dbu_partsresponses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>